# fastapi-curd-demo

./: .env  .gitignore  README.md  config.toml  justfile  main.py  pyproject.toml  rest-client.http  seeder.py
migrations/: env.py  script.py.mako
migrations/versions/: 0bfd89819bda_add_telephone_column_for_users.py  a595d92a6003_init_migration.py  aa73399c591b_init_migrations.py
src/: config.py
src/middlewares/: __init__.py
src/models/: __init__.py  article.py  user.py
src/routes/: __init__.py  articles.py  auth.py
src/shared/: api_v1.py  common.py  curd.py  jwt.py  response_fmt.py  tools.py
src/validation/: articles.py
