[project]
name = "sqlmodel-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.17.2",
    "bcrypt>=5.0.0",
    "fastapi>=0.127.0",
    "fastapi-cli>=0.0.20",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.29",
]
